--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,25 +1,25 @@
 .header {  
+  width: 100%;
   margin-bottom: 20px;
   padding: 20px;
-  display: inline-flex!important;
 
   .menu {
     list-style: none;
     padding: 0;
     margin: 0;
-    align-items: center;
-    
+    margin-left: 50px;
+    display: inline-block;
+
     li {
       margin-right: 70px;
-      font-size: 1rem;
+      font-size: 16px;
     }
   }
 
   h3 {
     font-size: 2rem;
     margin: 0;
-    margin-right: 15%;
-    white-space: nowrap;
+    display: inline-block;
   }
 
   h3 a {
