--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -1,4 +1,14 @@
+@import '../../style/mixins';
+
 .container {
   width: 100%;
   max-width: 1200px;
+
+  @include breakpoint('tablet') {
+    padding: 0 20px;
+  }
+
+  @include breakpoint('small') {
+    padding: 0 15px;
+  }
 }
