--- a/src/components/item-details/item-details.scss
+++ b/src/components/item-details/item-details.scss
@@ -1,7 +1,16 @@
+@import '../../style/mixins';
+
 .item-details {
-  flex-direction: row!important;
   padding: 2rem;
   border: 1px solid #545454;
+
+  @include breakpoint('tablet') {
+    padding: 15px;
+  }
+
+  @include breakpoint('small') {
+    padding: 15px;
+  }
 
   .item {
     width: 100%;
@@ -9,10 +18,18 @@
     grid-template-columns: 1fr 1fr 2fr;
     grid-gap: 30px 40px;
 
+    @include breakpoint('small') {
+      display: block;
+    }
+
     h4 {
       font-size: 32px;
       text-transform: capitalize;
       margin-bottom: 14px;
+
+      @include breakpoint('small') {
+        font-size: 24px;
+      }
     }
 
     .item-image {
@@ -21,6 +38,13 @@
       grid-column-end: 2;
       grid-row-start: 1;
       grid-row-end: 2;
+
+      @include breakpoint('small') {
+        max-width: 250px;
+        margin: 0 auto;
+        margin-bottom: 10px;
+        display: block;
+      }
     }
 
     .item-info, .item-info ul {
@@ -41,9 +65,28 @@
         grid-row-end: 1;
         margin-left: 30px;
 
+        @include breakpoint('tablet') {
+          grid-column-end: 4;
+        }
+
+        @include breakpoint('small') {
+          margin: 0px;
+          margin-bottom: 30px;
+        }
+
         ul li {
           font-size: 20px;
           line-height: 33px;
+
+          @include breakpoint('tablet') {
+            line-height: 35px;
+            padding: 0px;
+          }
+
+          @include breakpoint('small') {
+            font-size: 16px;
+            line-height: 27px;
+          }
         }
       }
 
@@ -57,6 +100,10 @@
         grid-row-start: 2;
         grid-row-end: 2;
 
+        @include breakpoint('small') {
+          padding: 10px 15px;
+        }
+
         li {
           font-weight: bold;
         }
@@ -65,15 +112,26 @@
 
     .item-inner-ul {
       margin-left: 40px;
+
+      @include breakpoint('tablet') {
+        margin-left: 20px;
+      }
       
+      @include breakpoint('small') {
+        margin-left: 10px;
+      }
+
       li {
         font-weight: 100;
-        list-style: circle; 
       }
 
       &--large {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
+
+        @include breakpoint('small') {
+          display: block;
+        }
       }
     }
   }
