--- a/src/components/item-details/item-details.scss
+++ b/src/components/item-details/item-details.scss
@@ -109,6 +109,7 @@
         }
 
         li {
+          font-size: 16px;
           font-weight: bold;
         }
       }
@@ -116,6 +117,10 @@
 
     .item-inner-ul {
       margin-left: 40px;
+
+      &.collapse {
+        display: none;
+      }
 
       @include breakpoint('tablet') {
         margin-left: 20px;
@@ -131,11 +136,29 @@
 
       &--large {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-
+        grid-template-columns: repeat(4, 1fr);
+        
         @include breakpoint('small') {
           display: block;
         }
+      }
+    }
+
+    .expand {
+      padding: 0;
+      display: flex;
+      align-items: center;
+      font-size: 16px;
+      font-weight: bold;
+      text-decoration: underline;
+
+      &::after {
+        content: '';
+        display: block;
+        border: 8px solid transparent;
+        border-top-color: #fff;
+        margin-left: 10px;
+        margin-top: 7px;
       }
     }
   }
