--- a/src/components/item-details/item-details.scss
+++ b/src/components/item-details/item-details.scss
@@ -26,27 +26,27 @@
       font-size: 32px;
       text-transform: capitalize;
       margin-bottom: 14px;
+      font-weight: bold;
 
       @include breakpoint('small') {
         font-size: 24px;
         text-align: center;
+        margin-bottom: 20px;
       }
     }
 
     .item-image {
       width: inherit;
-      grid-column-start: 1;
-      grid-column-end: 2;
+      grid-column-start: 2;
+      grid-column-end: 3;
       grid-row-start: 1;
       grid-row-end: 2;
-      max-width: 250px;
-      min-width: 200px;
-      margin: auto 0;
+      max-width: 140px;
+      min-width: 100px;
 
       @include breakpoint('small') {
-        max-width: 200px;
+        max-width: 100px;
         margin: 0 auto;
-        margin-bottom: 20px;
         display: block;
       }
     }
@@ -56,18 +56,25 @@
       padding: 0;
       margin-bottom: 0;
 
+      span {
+        color: #fff;
+        margin-right: 3px;
+        font-size: 16px;
+      }
+
       li {
         padding: 5px 0;
         font-size: 14px;
         letter-spacing: 0.3px;
+        color: #c3c3c3;
       } 
 
       &--base {
-        grid-column-start: 2;
+        grid-column-start: 1;
         grid-column-end: 2;
         grid-row-start: 1;
         grid-row-end: 1;
-        margin-left: 30px;
+        margin-left: 20px;
 
         @include breakpoint('tablet') {
           grid-column-end: 4;
@@ -76,11 +83,15 @@
         @include breakpoint('small') {
           margin: 0px;
           margin-bottom: 30px;
-        }
+        }       
 
         ul li {
-          font-size: 18px;
+          font-size: 16px;
           line-height: 27px;
+
+          span {
+            font-size: 18px;
+          }
 
           @include breakpoint('tablet') {
             line-height: 35px;
@@ -103,54 +114,75 @@
         grid-column-end: 4;
         grid-row-start: 2;
         grid-row-end: 2;
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-gap: 10px 20px;
 
         @include breakpoint('small') {
+          display: block;
           padding: 10px 15px;
         }
 
         li {
           font-size: 16px;
           font-weight: bold;
+
+          &:last-child {
+            grid-row-start: 2;
+            grid-row-end: 3;
+            grid-column-start: 2;
+            grid-column-end: 6;
+          }
         }
       }
     }
 
     .item-inner-ul {
-      margin-left: 40px;
 
       &.collapse {
         display: none;
       }
 
-      @include breakpoint('tablet') {
-        margin-left: 20px;
-      }
-      
-      @include breakpoint('small') {
-        margin-left: 10px;
+      &--large {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        border: 1px solid #ffffff78;
+        border-radius: 4px;
+        
+        @include breakpoint('small') {
+          display: block;
+        }
+  
+        li {
+          flex-basis: 170px;
+          margin-left: 30px;
+
+          @include breakpoint('tablet') {
+            flex-basis: 150px;
+            margin-left: 20px;
+          }
+        }
       }
 
       li {
         font-weight: 100;
       }
 
-      &--large {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        
-        @include breakpoint('small') {
-          display: block;
-        }
+      span {
+        margin: 5px 0;
+      }
+
+      p {
+        margin-bottom: 2px;
       }
     }
 
     .expand {
-      padding: 0;
-      display: flex;
-      align-items: center;
-      font-size: 16px;
+      padding: 6px 0;
+      display: inline-flex;
       font-weight: bold;
-      text-decoration: underline;
+      border: none;
 
       &::after {
         content: '';
@@ -158,7 +190,7 @@
         border: 8px solid transparent;
         border-top-color: #fff;
         margin-left: 10px;
-        margin-top: 7px;
+        margin-top: 10px;
       }
     }
   }
