--- a/src/components/item-list/item-list.scss
+++ b/src/components/item-list/item-list.scss
@@ -19,30 +19,28 @@
 
     @include breakpoint('small') {
       grid-template-columns: repeat(1, auto);
+      justify-content: center;
     }
 
     .card {
-      height: 300px;
       margin: 15px;
+      padding: 30px 0;
       display: flex;
       align-items: center;
       justify-content: space-evenly;
+      cursor: pointer;
 
       @include breakpoint('small') {
-        min-width: 90%;
-        height: 210px;
+        max-width: 90%;
+        min-width: 88%;
+        height: auto;
         margin: 10px 20px;
         justify-content: space-between;
       }
 
       img {
-        width: 160px;
-        height: 160px;
-
-        @include breakpoint('small') {
-          width: 120px;
-          height: 120px;
-        }
+        width: 120px;
+        height: 120px;
       }
 
       span {
