--- a/src/components/item-list/item-list.scss
+++ b/src/components/item-list/item-list.scss
@@ -27,7 +27,7 @@
       padding: 30px 0;
       display: flex;
       align-items: center;
-      justify-content: space-evenly;
+      justify-content: space-between;
       cursor: pointer;
 
       @include breakpoint('small') {
@@ -41,6 +41,7 @@
       img {
         width: 120px;
         height: 120px;
+        margin-bottom: 10px;
       }
 
       span {
